# reallocate_AI

./: .env.example  .gitignore  Home.py  README.md  app.py  app2.py  main.py  pyproject.toml  test.ipynb
.streamlit/: pages.toml  pages_sections.toml
components/: footer.py  header.py  tab_dashboard.py  tab_info.py  tab_kpis.py
components/2_pilot/: dashboard.py
components/home/: pilots.py
components/pilot/: info.py  tab_info.py  tab_kpis.py
config/: kpi.json  logos.json  pilots.json
data/: pilot_static_data.csv
data/pilots/: bcn_pilot_1.json  gothenburg_pilot_1.json
notebooks/: BcnOpenAPI.ipynb  README.md  Read-Dataset-CKAN.ipynb  Upload-Dataset-CKAN.ipynb  generate_jsons.ipynb  map_cities.ipynb  test.ipynb
pages/: 1_home.py  1_pilot.py  2_pilot.py  Barcelona Kepler.py  Barcelona Plotly.py  Barcelona V2.py  Barcelona copy.py  Barcelona.py  Gothenburg.py
pages/old/: Barcelona Kepler.py  Barcelona.py  Gothenburg.py
utils/: constants.py  data_loader.py  helpers.py  layout.py  maps.py
