[project]
name = "reallocate-ai"
version = "0.1.0"
description = "This project is aimed at integrating deliverable 5.4 from the reallocate project."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "streamlit",
    "requests",
    "geopandas",
    "shapely",
    "python-dotenv",
    "jupyterlab",
    "notebook",
    "ipython",
    "plotly"
]
